public/css/style.css
/* ... */
.hover\:to-yellow-300:hover {
  --tw-gradient-to: #fde047 var(--tw-gradient-to-position);
}

.hover\:to-green-300:hover {
  --tw-gradient-to: #86efac var(--tw-gradient-to-position);
}

.hover\:to-green-900:hover {
  --tw-gradient-to: #14532d var(--tw-gradient-to-position);
}

.hover\:to-rose-900:hover {
  --tw-gradient-to: #881337 var(--tw-gradient-to-position);
}

.hover\:to-gray-600:hover {
  --tw-gradient-to: #4b5563 var(--tw-gradient-to-position);
}

.hover\:to-gray-900:hover {
  --tw-gradient-to: #111827 var(--tw-gradient-to-position);
}

.hover\:to-blue-700:hover {
  --tw-gradient-to: #1d4ed8 var(--tw-gradient-to-position);
}

.hover\:underline:hover {
  text-decoration-line: underline;
}

.focus\:z-10:focus {
  z-index: 10;
}

.focus\:outline-none:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.focus\:ring-0:focus {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}

.focus\:ring-2:focus {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}

.focus\:ring-indigo-500:focus {
  --tw-ring-opacity: 1;
  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
}

.focus\:ring-offset-2:focus {
  --tw-ring-offset-width: 2px;
}

@media (min-width: 640px) {
  .sm\:px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }

  .sm\:text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 768px) {
  .md\:m-10 {
    margin: 2.5rem;
  }

  .md\:mx-auto {
    margin-left: auto;
    margin-right: auto;
  }

  .md\:mt-10 {
    margin-top: 2.5rem;
  }

  .md\:mb-5 {
    margin-bottom: 1.25rem;
  }

  .md\:mt-5 {
    margin-top: 1.25rem;
  }

  .md\:h-screen {
    height: 100vh;
  }

  .md\:h-10 {
    height: 2.5rem;
  }

  .md\:h-20 {
    height: 5rem;
  }

  .md\:w-1\/2 {
    width: 50%;
  }

  .md\:w-3\/4 {
    width: 75%;
  }

  .md\:w-full {
    width: 100%;
  }

  .md\:w-10 {
    width: 2.5rem;
  }

  .md\:w-20 {
    width: 5rem;
  }

  .md\:w-screen {
    width: 100vw;
  }

  .md\:w-1\/5 {
    width: 20%;
  }

  .md\:w-1\/4 {
    width: 25%;
  }

  .md\:w-1\/3 {
    width: 33.333333%;
  }

  .md\:w-2\/3 {
    width: 66.666667%;
  }

  .md\:w-5\/6 {
    width: 83.333333%;
  }

  .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:grid-rows-2 {
    grid-template-rows: repeat(2, minmax(0, 1fr));
  }

  .md\:justify-start {
    justify-content: flex-start;
  }

  .md\:justify-center {
    justify-content: center;
  }

  .md\:p-6 {
    padding: 1.5rem;
  }

  .md\:p-4 {
    padding: 1rem;
  }

  .md\:px-10 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }

  .md\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .md\:text-lg {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }

  .md\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .lg\:m-10 {
    margin: 2.5rem;
  }

  .lg\:mx-auto {
    margin-left: auto;
    margin-right: auto;
  }

  .lg\:mt-5 {
    margin-top: 1.25rem;
  }

  .lg\:w-1\/2 {
    width: 50%;
  }

  .lg\:grid-cols-4 {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

  .lg\:flex-row {
    flex-direction: row;
  }

  .lg\:p-6 {
    padding: 1.5rem;
  }

  .lg\:px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

